--- a/MyJira/MyJira/MyJira.csproj
+++ b/MyJira/MyJira/MyJira.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Team\Index.cshtml" />
     <Content Include="Views\Team\New.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\Team\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
