add some views and controllers

--- a/MyJira/MyJira/MyJira.csproj
+++ b/MyJira/MyJira/MyJira.csproj
@@ -249,6 +249,9 @@
     <Content Include="Views\Team\Edit.cshtml" />
     <Content Include="Views\Project\Index.cshtml" />
     <Content Include="Views\Project\New.cshtml" />
+    <Content Include="Views\Project\Edit.cshtml" />
+    <Content Include="Views\Project\Show.cshtml" />
+    <Content Include="Views\Team\Show.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
